feat: 🎸 my first amplify function, cant amplify push on linx

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -18,5 +18,13 @@
         }
       }
     }
+  },
+  "auth": {},
+  "function": {
+    "addBackgroundColorBlue": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
   }
 }
